Fix invisible login button
https://github.com/chamilo/chamilo-lms/commit/7d62ad717b43a0fbeee03dcff9471fe6ab5cbde0

--- a/app/Resources/public/css/base.css
+++ b/app/Resources/public/css/base.css
@@ -187,9 +187,9 @@ select {
     margin: 15px 0 5px;
 }
 
-#login-block #formLogin .form-group {
+/*#login-block #formLogin .form-group {
     display: none;
-}
+}*/
 
 #login-block .btn-group, .btn-group-vertical {
     width: 100%;
